trying to fix containers overlapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,17 +22,14 @@ header{
     justify-content: space-between;
 }
 header img{
-    z-index: 1;
     height: 50px;
 }
 header ul{
-    z-index: 1;
     display: flex;
     flex-wrap: nowrap;
     flex-shrink: 1;
 }
 header ul li{
-    z-index: 1;
     position: relative;
     display: inline-block;
     text-decoration: underline;
@@ -42,7 +39,6 @@ header ul li{
     
 }
 header a{
-    z-index: 1;
     color: seashell;
 }
 header a:hover{
@@ -65,6 +61,7 @@ header a:active{
     margin: 0 auto;
     background-image: url("https://content.codecademy.com/courses/freelance-1/unit-4/img-mission-background.jpg");
     background-position: 50% 50%;
+    z-index: 2;
 }
 .text{
     text-align: center;
@@ -113,6 +110,7 @@ header a:active{
 /*Tea Of the month*/
 /*Locations*/
 .locations{
+    z-index: 2;
     display:flex;
     justify-content: center;
     align-items: center;
